Aggiunti controlli di email e password per la creazione dell'utente, sistemato problema di scomparsa dell'issue selezionata durante l'apertura di un pop up.